# doc/api.yaml
@@ -530,12 +530,7 @@ paths:
                     - type: object
                       properties:
                         timestamp:
-                          description: "Date and Time of the message read"
-                          type: string
-                          example: 06/06/2024 13:00
-                          minLength: 1
-                          maxLength: 20
-                          pattern: "^(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/([0-9]{4}) ([01][0-9]|2[0-3]):([0-5][0-9])$"
+                          $ref: "#/components/schemas/Timestamp"
 
   /messages/{messageId}/forward:
     parameters:
@@ -557,10 +552,13 @@ paths:
         content:
           application/json:
             schema:
-              description: Conversation ID
+              description: Conversation ID and Message ID
               type: object
               properties:
-                conversationId:
+                conversationID:
+                  $ref: "#/components/schemas/UUID"
+
+                messageID:
                   $ref: "#/components/schemas/UUID"
 
       responses:
@@ -787,40 +785,19 @@ tags:
 components:
   schemas:
     PrivateConversation:
-      description: "Structure of a conversation"
-      allOf:
-        - $ref: "#/components/schemas/User"
-        - type: object
-          properties:
-            conversationID:
-              allOf:
-                - $ref: "#/components/schemas/UUID"
-                - readOnly: true
+      description: "Structure of a Private conversation"
+      type: object
+      properties:
+        conversationID:
+          allOf:
+            - $ref: "#/components/schemas/UUID"
+            - readOnly: true
 
-            latestMessage:
-              description: "Details of the lastest message"
-              type: object
-              properties:
-                timestamp:
-                  description: "Date and Time of the message sent"
-                  type: string
-                  example: 06/06/2024 13:00
-                  minLength: 1
-                  maxLength: 20
-                  pattern: "^(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/([0-9]{4}) ([01][0-9]|2[0-3]):([0-5][0-9])$"
+        user:
+          $ref: "#/components/schemas/User"
 
-                isImage:
-                  description: "Describes if the image is an Image or not"
-                  type: boolean
-                  example: false
-
-                message:
-                  description: "Text of the message sent"
-                  type: string
-                  example: Hello this is John Doe
-                  pattern: "^.*?$"
-                  minLength: 1
-                  maxLength: 2000
+        latestMessage:
+          $ref: "#/components/schemas/LatestMessage"
 
     GroupConversation:
       description: Structure of a Group Conversation
@@ -849,29 +826,7 @@ components:
           maxLength: 1000
 
         latestMessage:
-          description: "Details of the lastest message"
-          type: object
-          properties:
-            timestamp:
-              description: "Date and Time of the message sent"
-              type: string
-              example: 06/06/2024 13:00
-              minLength: 1
-              maxLength: 20
-              pattern: "^(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/([0-9]{4}) ([01][0-9]|2[0-3]):([0-5][0-9])$"
-
-            isImage:
-              description: "Describes if the image is an Image or not"
-              type: boolean
-              example: false
-
-            message:
-              description: "Text of the message sent"
-              type: string
-              example: Hello this is John Doe
-              pattern: "^.*?$"
-              minLength: 1
-              maxLength: 2000
+          $ref: "#/components/schemas/LatestMessage"
 
     Message:
       description: "Structure of a Message"
@@ -885,19 +840,41 @@ components:
         senderID:
           $ref: "#/components/schemas/UUID"
 
-        isImage:
-          description: "Describes if the Message is an Image or not"
+        conversationID:
+          $ref: "#/components/schemas/UUID"
+
+        replyMessageID:
+          $ref: "#/components/schemas/UUID"
+
+        timestamp:
+          $ref: "#/components/schemas/Timestamp"
+
+        timeDelivered:
+          $ref: "#/components/schemas/Timestamp"
+
+        timeRead:
+          $ref: "#/components/schemas/Timestamp"
+
+        hasImage:
+          description: "Describes if the Message has an Image or not"
           type: boolean
           example: false
 
-        imageUri:
-          description: "URI of the image sent"
+        messageType:
+          description: "Describes the type of the message"
           type: string
-          format: file
-          pattern: '^(.+)\/([^\/]+)$'
-          example: "assets/images/img1.jpg"
-          minLength: 1
-          maxLength: 1000
+          enum:
+            - reply
+            - forward
+            - default
+
+        messageStatus:
+          description: "Describes the status of the message"
+          type: string
+          enum:
+            - sent
+            - delivered
+            - read
 
         message:
           description: "Text of the message sent"
@@ -907,20 +884,22 @@ components:
           minLength: 1
           maxLength: 2000
 
-        isDelivered:
-          description: "Describes if the Message is Delivered"
-          type: boolean
-          default: false
+        image:
+          description: "URI of the image sent"
+          type: string
+          format: file
+          pattern: '^(.+)\/([^\/]+)$'
+          example: "assets/images/img1.jpg"
+          minLength: 1
+          maxLength: 1000
 
-        isRead:
-          description: "Describes if the Message is Read"
-          type: boolean
-          default: false
-
-        isForwarded:
-          description: "Describes if the Message is Forwarded"
-          type: boolean
-          default: false
+        replyMessage:
+          description: "Reply to a message"
+          type: string
+          example: Hello World
+          pattern: "^.*?$"
+          minLength: 1
+          maxLength: 2000
 
         reactions:
           description: "Describes all of the reactions of a Message"
@@ -994,6 +973,34 @@ components:
       pattern: '[^:\s]*(?:::[^:\s]*)*'
       minLength: 1
       maxLength: 100
+
+    Timestamp:
+      description: "Date and Time of the message read"
+      type: string
+      example: 06/06/2024 13:00
+      minLength: 1
+      maxLength: 20
+      pattern: "^(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[0-2])/([0-9]{4}) ([01][0-9]|2[0-3]):([0-5][0-9])$"
+
+    LatestMessage:
+      description: "Details of the lastest message"
+      type: object
+      properties:
+        timestamp:
+          $ref: "#/components/schemas/Timestamp"
+
+        isImage:
+          description: "Describes if the image is an Image or not"
+          type: boolean
+          example: false
+
+        message:
+          description: "Text of the message sent"
+          type: string
+          example: Hello this is John Doe
+          pattern: "^.*?$"
+          minLength: 1
+          maxLength: 2000
 
   securitySchemes:
     bearerAuth:
