# service/api/api-handler.go
@@ -24,6 +24,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/conversations/:chatId/details", rt.wrap(rt.getConversation, true))
 	rt.router.GET("/conversations/:chatId/messages", rt.wrap(rt.listMessages, true))
 	rt.router.POST("/conversations/:chatId/messages", rt.wrap(rt.addMessage, true))
+	rt.router.GET("/conversations/:chatId/messages/:messageId/readers", rt.wrap(rt.listReaders, true))
 
 	rt.router.GET("/private-conversations", rt.wrap(rt.listPrivateConversation, true))
 	rt.router.POST("/private-conversations", rt.wrap(rt.addPrivateChat, true))
